--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -28,7 +28,7 @@ jobs:
      - uses: actions/checkout@v2
      - name: Checking the folder name
        run: |
-         echo "Running for folder ${{ matrix.name }}"
+         echo "Running for folder ${{ inputs.resource }}"
      - name: Deploy project from ${{ github.head_ref }} to DEV ${{ github.base_ref }} ${{ github.head_ref }}
        run: echo Deploy del proyecto en el entorno de ${{ inputs.stage }}
   build-and-deploy-to-pre:
