--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,6 +22,13 @@ jobs:
             - 'lambda1/**'
           lambda2:
             - 'lambda2/**'
+  print-output:
+    needs: changes
+    if: ${{ needs.changes.outputs.names != '[]' }}
+    steps:
+     - name: Print output selected
+       run: echo values selected- ${{ fromJSON(needs.changes.outputs.names) }} 
+
   activate-workflow:
     needs: changes
     if: ${{ needs.changes.outputs.names != '[]' }}
