--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -37,7 +37,7 @@ jobs:
     strategy:
       max-parallel: 1
       matrix:
-         workflow: ${{ fromJSON(needs.changes.outputs.names) }}
+         workflow: ${{ (needs.changes.outputs.names) }}
     uses: ./.github/workflows/reusable-workflow.yml
     with:
       stage: dev
