--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -36,7 +36,8 @@ jobs:
     name:  ${{matrix.name}} - ${{ matrix.environment }}
     strategy:
       matrix:
-        workflow: ${{ (needs.changes.outputs.names) }}
+        #workflow: ${{ (needs.changes.outputs.names) }}
+        workflow:[lambda1, lambda2]
     uses: ./.github/workflows/reusable-workflow.yml
     with:
       stage: dev
