--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -44,10 +44,10 @@ jobs:
        run: mvn clean install ${{ inputs.maven-params }} --file pom.xml     
   
      - name: Set project version as environment variable
-        run: echo "PROJECT_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
+       run: echo "PROJECT_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
      
      - name: Print debug info
-        run: |
+       run: |
           echo working_directory is ${{ inputs.resource }}
           echo project version is ${{ env.PROJECT_VERSION }}
           echo java-version is ${{ inputs.java-version }}  
@@ -61,8 +61,8 @@ jobs:
      - name: Push image to AWS ECR 
        run: echo Push image to AWS ECR
 
-      name: Scan ECR image with Trivy vulnerability scanner
-      run: echo Scan ECR image with Trivy vulnerability scanner
+     - name: Scan ECR image with Trivy vulnerability scanner
+       run: echo Scan ECR image with Trivy vulnerability scanner
 
      - name: Deploy project from ${{ github.head_ref }} to DEV ${{ github.base_ref }} ${{ github.head_ref }}
        run: echo Deploy del proyecto en el entorno de ${{ inputs.stage }}
