initial import for docker

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,7 +22,15 @@ jobs:
             - 'lambda1/**'
           lambda2:
             - 'lambda2/**'
-   activate-workflow:
+  print-output:
+    needs: changes
+    runs-on: ubuntu-latest
+    if: ${{ needs.changes.outputs.names != '[]' }}
+    steps:
+     - name: Print output selected
+       run: echo values selected- ${{ fromJSON(needs.changes.outputs.names) }} 
+
+  activate-workflow:
     needs: changes
     if: ${{ needs.changes.outputs.names != '[]' }}
     name:  Deploying lambda(s) funtion(s) ${{ (matrix.workflow ) }}  
