--- a/.github/workflows/CI-Dev.yml
+++ b/.github/workflows/CI-Dev.yml
@@ -180,5 +180,6 @@ jobs:
     uses: ./.github/workflows/reusable-workflow.yml
     with:
       stage: dev
+      action: build
       resource: ${{ (matrix.workflow ) }} 
 
