--- a/.github/workflows/CI-Dev.yml
+++ b/.github/workflows/CI-Dev.yml
@@ -60,11 +60,12 @@ on:
       - 'lambda2/**'
 jobs:
   changes:
-    name: Detect Changes in folder ${{ github.base_ref }} ${{ github.head_ref }}
+    name: Detect Changes in folder 
     runs-on: ubuntu-latest
     outputs:
       names: ${{ steps.filter.outputs.changes }}
     steps:
+    - run echo ${{ github.base_ref }} ${{ github.head_ref }}
     - uses: actions/checkout@v2
     - name: Detect Changes
       uses: dorny/paths-filter@v2
