--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -40,7 +40,7 @@ jobs:
      - name: Checkout folder source code
        run: |
          echo "Checkout folder ${{ inputs.resource }}"
-     
+     - run: echo ${{ github.base_ref }} ${{ github.head_ref }}
      - name: Setup jdk
        uses: actions/setup-java@de1bb2b0c5634f0fc4438d7aa9944e68f9bf86cc
        with:
