--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -53,7 +53,7 @@ jobs:
   build-image-layer:
     name: Deploy layer ${{ inputs.stage }} the lambda function ${{ inputs.resource }}
     needs: build-project
-    if: contains(inputs.resource , 'lambda1') 
+    if: contains(inputs.resource , 'lambda1') && ${{ github.ref_name == 'develop' }} 
     runs-on: ubuntu-latest
     steps:
      - run: echo Build image layer 
