--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -28,6 +28,12 @@ on:
     #    required: true
 
 jobs:
+  set-vars: 
+   name: Configuration for beta branch
+   if: contains(inputs.resource , 'lambda1')
+    run: |
+      echo "IS_LAYER=true" >> $GITHUB_ENV
+  
   build-project:
     name: Build ${{ inputs.stage }} the lambda function ${{ inputs.resource }}
     runs-on: ubuntu-latest
@@ -53,7 +59,7 @@ jobs:
   build-image-layer:
     name: Deploy layer ${{ inputs.stage }} the lambda function ${{ inputs.resource }}
     needs: build-project
-    if: contains(inputs.resource , 'lambda1') && ${{ github.ref_name == 'develop' }} 
+    if: ${{ env.IS_LAYER == 'true' }} && ${{ github.ref_name == 'develop' }} 
     runs-on: ubuntu-latest
     steps:
      - run: echo Build image layer 
