--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -31,6 +31,7 @@ jobs:
   set-vars: 
     name: Configuration for beta branch
     if: contains(inputs.resource , 'lambda1')
+    runs-on: ubuntu-latest
     steps:
       run: echo "IS_LAYER=true" >> $GITHUB_ENV
   
