--- a/.github/workflows/CI-Dev.yml
+++ b/.github/workflows/CI-Dev.yml
@@ -79,7 +79,7 @@ jobs:
     needs: activate-workflow
     runs-on: ubuntu-latest
     strategy:
-      matrix: ${{ fromJSON( steps.run-script.outputs.SELECTED_COLOR) }}
+      matrix: ${{ fromJSON( needs.run-script.outputs.SELECTED_COLOR) }}
     steps:
       - run: echo ${{ (matrix  ) }}    
  # activate-workflow:
