--- a/.github/workflows/CI-Dev.yml
+++ b/.github/workflows/CI-Dev.yml
@@ -82,15 +82,15 @@ jobs:
       matrix: ${{ fromJSON( needs.activate-workflow.outputs.matrix) }}
     steps:
       - run: echo ${{ (matrix  ) }}    
- # activate-workflow:
- #   needs: changes
- #   if: ${{ needs.changes.outputs.names != '[]' }}
- #   name:  Deploying lambda(s) funtion(s)  
- #   strategy:
- #     matrix:
- #       workflow: ${{ fromJSON(needs.changes.outputs.names) }}
- #   uses: ./.github/workflows/reusable-workflow.yml
- #   with:
- #     stage: dev
- #     resource: ${{ (matrix.workflow ) }} 
+  activate-workflow:
+    needs: activate-workflow
+    if: ${{ needs.activate-workflow.outputs.matrix != '[]' }}
+    name:  Deploying lambda(s) funtion(s)  
+    strategy:
+      matrix:
+        workflow: ${{ fromJSON(needs.activate-workflow.outputs.matrix) }}
+    uses: ./.github/workflows/reusable-workflow.yml
+    with:
+      stage: dev
+      resource: ${{ (matrix.workflow ) }} 
 
