--- a/.github/workflows/CI-Dev.yml
+++ b/.github/workflows/CI-Dev.yml
@@ -75,21 +75,11 @@ jobs:
          echo "matrix=$(./1.sh)" >> $GITHUB_OUTPUT
       shell: bash
     
-  #job2:
-  #  needs: activate-workflow
-  #  runs-on: ubuntu-latest
-  #  strategy:
-  #    matrix: ${{ fromJSON( needs.activate-workflow.outputs.matrix) }}
-  #  steps:
-  #    - run: echo ${{ (matrix  ) }}    
-  run-workflow:
+  job2:
     needs: activate-workflow
-    if: ${{ needs.activate-workflow.outputs.matrix != '[]' }}
-    name:  Deploying lambda(s) funtion(s)  
+    runs-on: ubuntu-latest
     strategy:
-      matrix: ${{ fromJSON(needs.activate-workflow.outputs.matrix) }}
-    uses: ./.github/workflows/reusable-workflow.yml
-    with:
-      stage: dev
-      resource: ${{ (matrix) }} 
-
+      matrix: ${{ fromJSON( needs.activate-workflow.outputs.matrix) }}
+    steps:
+      - run: echo ${{ (matrix  ) }}    
+  
