--- a/.github/workflows/CI-Dev.yml
+++ b/.github/workflows/CI-Dev.yml
@@ -82,4 +82,14 @@ jobs:
       matrix: ${{ fromJSON( needs.activate-workflow.outputs.matrix) }}
     steps:
       - run: echo ${{ (matrix  ) }}    
-  
+  run-workflow:
+    needs: activate-workflow
+    #if: ${{ needs.activate-workflow.outputs.matrix != '[]' }}
+    name:  Deploying lambda(s) funtion(s)  
+    strategy:
+      matrix: ${{ fromJSON(needs.activate-workflow.outputs.matrix) }}
+    uses: ./.github/workflows/reusable-workflow.yml
+    with:
+      stage: dev
+      resource: ${{ (matrix) }} 
+
