--- a/.github/workflows/CI-Dev.yml
+++ b/.github/workflows/CI-Dev.yml
@@ -79,18 +79,6 @@ jobs:
     needs: activate-workflow
     strategy:
       matrix: ${{ fromJSON( needs.activate-workflow.outputs.matrix) }}
-    uses: ./.github/workflows/reusable-workflow.yml
-    with:
-      stage: dev
-      resource: ${{ (matrix) }}    
-  run-workflow:
-    needs: activate-workflow
-    #if: ${{ needs.activate-workflow.outputs.matrix != '[]' }}
-    name:  Deploying lambda(s) funtion(s)  
-    strategy:
-      matrix: ${{ fromJSON(needs.activate-workflow.outputs.matrix) }}
-    uses: ./.github/workflows/reusable-workflow.yml
-    with:
-      stage: dev
-      resource: ${{ (matrix) }} 
-
+    steps:
+    - run echo ${{matrix}}
+  
