--- a/.github/workflows/CI-Dev.yml
+++ b/.github/workflows/CI-Dev.yml
@@ -76,6 +76,7 @@ jobs:
       shell: bash
     
   job2:
+    runs-on: ubuntu-latest
     needs: activate-workflow
     strategy:
       matrix: ${{ fromJSON( needs.activate-workflow.outputs.matrix) }}
