--- a/.github/workflows/CI-Dev.yml
+++ b/.github/workflows/CI-Dev.yml
@@ -77,6 +77,7 @@ jobs:
     
   job2:
     needs: activate-workflow
+    runs-on: ubuntu-latest
     strategy:
       matrix: ${{ fromJSON( needs.activate-workflow.outputs.matrix) }}
     steps:
