--- a/.github/workflows/CI-Dev.yml
+++ b/.github/workflows/CI-Dev.yml
@@ -81,5 +81,5 @@ jobs:
     strategy:
       matrix: ${{ fromJSON( needs.activate-workflow.outputs.matrix) }}
     steps:
-    - run: echo ${{matrix}}
+    - run: echo ${{matrix.source}}
   
