--- a/.github/workflows/CI-Dev.yml
+++ b/.github/workflows/CI-Dev.yml
@@ -79,7 +79,7 @@ jobs:
     needs: activate-workflow
     runs-on: ubuntu-latest
     strategy:
-      matrix: ${{ fromJSON( needs.activate-workflow.outputs.matrix) }}
+      matrix: ${{ fromJSON( needs.activate-workflow.outputs.matrix.source) }}
     steps:
-    - run: echo ${{matrix.source}}
+    - run: echo ${{matrix }}
   
